fixed heroku problems and card overflow

--- a/app/assets/stylesheets/components/_book_it.scss
+++ b/app/assets/stylesheets/components/_book_it.scss
@@ -19,6 +19,9 @@
     font-family: $body-font;
     color: #ff3355;
   }
+  label {
+    color: white;
+  }
   &:hover {
     box-shadow: 0 0 65px #e9f8ff;
   }
