--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -54,6 +54,7 @@
   color: rgb(255, 255, 255);
   font-size: 20px;
   overflow: hidden;
+  height: 100px;
 }
 .card-price {
   position: aboslute;
